Fixed issue with image overlapping button on main page

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
 main {
 	width: 100vw;
 	height: 100vh;
+	gap: max(10vh, 10vw);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
